--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@ layout: default
                 and put effort on some of the best libraries with wich we can use to build our applications.
                 Penny was born to manage integration between your favorite libraries and it does not force you to use nothing you don't want to.
                 </p>
-            <div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="title col-md-4 text-center">
+                <img class="img-responsive" src="/img/pennyphp.png">
+            </div>
         </div>
 
     </div>
