--- a/index.html
+++ b/index.html
@@ -36,5 +36,22 @@ layout: default
             </div>
         </div>
 
+        <div class="row text-center">
+            <div class="col-md-6">
+                <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">From development to production with <a href="https://twitter.com/docker">@Docker</a> and <a href="https://twitter.com/aws_eb">@aws_eb</a> by <a href="https://twitter.com/fntlnz">@fntlnz</a>: <a href="https://t.co/aswNvfb8PZ">https://t.co/aswNvfb8PZ</a> via <a href="https://twitter.com/faciledevs">@faciledevs</a> <a href="https://twitter.com/hashtag/AWS?src=hash">#AWS</a> <a href="https://twitter.com/hashtag/Docker?src=hash">#Docker</a></p>&mdash; Docker (@docker) <a href="https://twitter.com/docker/status/657320605243473920">October 22, 2015</a></blockquote>
+            </div>
+            <div class="col-md-6">
+                <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/fntlnz">@fntlnz</a> <a href="https://twitter.com/samsonasik">@samsonasik</a> <a href="https://twitter.com/EmanueleMinotto">@EmanueleMinotto</a> New <a href="https://twitter.com/hashtag/pennyphp?src=hash">#pennyphp</a> use case <a href="https://t.co/Om1DybP3KT">https://t.co/Om1DybP3KT</a> <a href="https://twitter.com/hashtag/php?src=hash">#php</a> <a href="https://twitter.com/hashtag/microservices?src=hash">#microservices</a></p>&mdash; Gianluca Arbezzano (@GianArb) <a href="https://twitter.com/GianArb/status/657169955880869888">October 22, 2015</a></blockquote>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-6">
+                <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Reviewing <a href="https://twitter.com/hashtag/pennyphp?src=hash">#pennyphp</a> classic app dockerfiles and environments. cc/ <a href="https://twitter.com/GianArb">@GianArb</a> <a href="https://twitter.com/hashtag/docker?src=hash">#docker</a> <a href="http://t.co/KFJ3SDFUwe">pic.twitter.com/KFJ3SDFUwe</a></p>&mdash; Fontana Lorenzo (@fntlnz) <a href="https://twitter.com/fntlnz/status/647136812004188164">September 24, 2015</a></blockquote>
+            </div>
+            <div class="col-md-6">
+                <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Blogged: Getting Closer with Penny - A PHP Framework by <a href="https://twitter.com/GianArb">@gianarb</a> <a href="http://t.co/YaJDGQwE41">http://t.co/YaJDGQwE41</a> <a href="https://twitter.com/hashtag/diactoros?src=hash">#diactoros</a> <a href="https://twitter.com/hashtag/fastroute?src=hash">#fastroute</a> <a href="https://twitter.com/hashtag/eventmanager?src=hash">#eventmanager</a></p>&mdash; Abdul Malik Ikhsan (@samsonasik) <a href="https://twitter.com/samsonasik/status/640936093072781317">September 7, 2015</a></blockquote>
+            </div>
+        </div>
+
     </div>
 </div>
