--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,22 @@ summary: This is a list of blogpost. Penny is a PHP ecosystem and we could
 tags: devops, developer, blog, post, docker, php
 permalink: /blog/
 ---
-<div id="slogan" class="row" style="margin-bottom:50px">
+<div id="slogan" class="row">
   <div class="col-md-12">
     <div class="text-center">
         <h1>Blog</h1>
         <h2>tutorial, docs and news by Penny PHP world</h2>
     </div>
   </div>
+</div>
+
+<div class="title col-md-12 text-center well">
+    <p>With this blog we would increase our use cases and helps you to
+    understand our daily work with news, trick and feedback to work in the best
+    wa with PennyPHP.</p> <p>Are you interested to share an article with us?
+    This site is manage from GitHub GH-Pages and Jenkins please create a PR
+    here <a href="https://github.com/pennyphp/pennyphp.github.com"
+    target="_blank">pennyphp/pennyphp.github.com</a></p>
 </div>
 
 {% for post in site.posts %}
