Add banner menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
         <div class="row">
             <div class="col-md-4"></div>
             <div class="title col-md-4 text-center">
-                <img class="img-responsive" src="/img/pennyphp.png">
+                <img alt="penny" class="img-responsive" src="/img/pennyphp.png">
             </div>
         </div>
 
